--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-force-graph": "^1.44.6",
     "react-force-graph-2d": "^1.25.7",
+    "react-graph-vis": "^1.0.7",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "three": "^0.169.0",
